Set database through docker

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development nodemon",
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "alex geer",
   "license": "MIT",
