--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,15 @@ services:
   postgres:
     image: "postgres:16.4"
     environment:
-      - POSTGRES_PASSWORD=password123
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      # - ./server/db/init_db.sh:/docker-entrypoint-initdb.d/init_db.sh
-      # - ./server/db/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - bookclub_data:/var/lib/postgresql/data
+      - ./db:/docker-entrypoint-initdb.d # Mount the db folder to initialize the schema
+    # command: ["bash", "/docker-entrypoint-initdb.d/init-db.sh"]
+    ports:
+      - 5432:5432
+    restart: unless-stopped
 
   pgadmin:
     image: dpage/pgadmin4
@@ -48,4 +52,4 @@ services:
       - WDS_SOCKET_PORT=0
 
 volumes:
-  postgres_data:
+  bookclub_data:
