added login form

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - ./server:/app
     env_file:
       - ./server/.env
+    depends_on:
+      - postgres
   client:
     build:
       dockerfile: Dockerfile.dev
