--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: bob@bob.com
       PGADMIN_DEFAULT_PASSWORD: bob321
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./server/db/servers.json:/pgadmin4/servers.json
     ports:
       - "8080:80" # Exposes pgAdmin on http://localhost:8080
     depends_on:
@@ -54,3 +57,4 @@ services:
 
 volumes:
   bookclub_data:
+  pgadmin_data:
